--- a/force-app/main/default/classes/DelegateService.cls
+++ b/force-app/main/default/classes/DelegateService.cls
@@ -71,7 +71,10 @@ public without sharing class DelegateService {
         hcpDelegatesList = [
                 SELECT Id, Referring_Provider__r.Full_Name__c,
                         Referring_Provider__c, Delegate__c,
-                        Delegate_Access_Level__c
+                        Delegate_Access_Level__c,
+                        Referring_Provider__r.Salutation,
+                        Referring_Provider__r.Title,
+                        Referring_Provider__r.Suffix
                 FROM RP_Delegate_Relationship__c
                 WHERE Delegate__c = :CommunityService.getUserContact().Id
         ];
