--- a/force-app/main/default/classes/DelegateService.cls
+++ b/force-app/main/default/classes/DelegateService.cls
@@ -74,7 +74,7 @@ public without sharing class DelegateService {
                         Delegate_Access_Level__c,
                         Referring_Provider__r.Salutation,
                         Referring_Provider__r.Title
-                        //Referring_Provider__r.Suffix
+                        Referring_Provider__r.Suffix
                 FROM RP_Delegate_Relationship__c
                 WHERE Delegate__c = :CommunityService.getUserContact().Id
         ];
