--- a/force-app/main/default/classes/TravelVendorPanelRemote.cls
+++ b/force-app/main/default/classes/TravelVendorPanelRemote.cls
@@ -64,7 +64,10 @@ public with sharing class TravelVendorPanelRemote {
                         vendorSettingsWithStub.add(
                                 new TravelVendorSettings__c (
                                         isEnable__c = false,
-                                        TravelVendor__r = vendor
+                                        TravelVendor__c = vendor.Id,
+                                        TravelVendor__r = vendor,
+                                        Study_Site__c = vendorItem.studySite.Id,
+                                        Study_Site__r = vendorItem.studySite
                                 )
                         );
                     }
@@ -91,26 +94,32 @@ public with sharing class TravelVendorPanelRemote {
                 studyIds = ssIds.split(';');
             }
             result = supportHelper.getVendorItems(countryCodeList, ctpId, studyIds, vendors);
-            for (TravelVendor__c vendor : vendors) {
-                for (VendorItem vendorItem : result) {
-                    List<TravelVendorSettings__c> vendorSettingsWithStub = new List<TravelVendorSettings__c>();
-                    Map<Id, TravelVendorSettings__c> travelVendorSettingsByVendorId = new Map<Id, TravelVendorSettings__c>();
-                    for (TravelVendorSettings__c travelVendorSettings : vendorItem.vendorSettings) {
-                        travelVendorSettingsByVendorId.put(travelVendorSettings.TravelVendor__c, travelVendorSettings);
+            if (vendors != null && !vendors.isEmpty()) {
+                for (TravelVendor__c vendor : vendors) {
+                    for (VendorItem vendorItem : result) {
+                        List<TravelVendorSettings__c> vendorSettingsWithStub = new List<TravelVendorSettings__c>();
+                        Map<Id, TravelVendorSettings__c> travelVendorSettingsByVendorId = new Map<Id, TravelVendorSettings__c>();
+                        for (TravelVendorSettings__c travelVendorSettings : vendorItem.vendorSettings) {
+                            travelVendorSettingsByVendorId.put(travelVendorSettings.TravelVendor__c, travelVendorSettings);
+                        }
+                        if (travelVendorSettingsByVendorId.containsKey(vendor.Id)) {
+                            vendorSettingsWithStub.add(travelVendorSettingsByVendorId.get(vendor.Id));
+                        } else {
+                            vendorSettingsWithStub.add(
+                                    new TravelVendorSettings__c (
+                                            isEnable__c = false,
+                                            TravelVendor__c = vendor.Id,
+                                            TravelVendor__r = vendor,
+                                            Study_Site__c = vendorItem.studySite.Id,
+                                            Study_Site__r = vendorItem.studySite
+                                    )
+                            );
+                        }
+                        vendorItem.vendorSettings = vendorSettingsWithStub;
                     }
-                    if (travelVendorSettingsByVendorId.containsKey(vendor.Id)) {
-                        vendorSettingsWithStub.add(travelVendorSettingsByVendorId.get(vendor.Id));
-                    } else {
-                        vendorSettingsWithStub.add(
-                                new TravelVendorSettings__c (
-                                        isEnable__c = false,
-                                        TravelVendor__r = vendor
-                                )
-                        );
-                    }
-                    vendorItem.vendorSettings = vendorSettingsWithStub;
                 }
             }
+
         } catch (Exception e) {
             return (List<VendorItem>) AuraHelper.throwException(e);
         }
@@ -118,22 +127,36 @@ public with sharing class TravelVendorPanelRemote {
     }
 
     @AuraEnabled
-    public static void saveData(List<VendorItem> items) {
-        List<TravelVendorSettings__c> travelVendorSettings = new List<TravelVendorSettings__c>();
+    public static void saveData(Id ctpId, String items) {
+        System.debug('saveData ===> ' + ctpId +  '\n' + items);
+        List<VendorItem> vendorItems = (List<VendorItem>) JSON.deserialize(items, VendorItem.class);
+        System.debug('vendorItems ===> ' + vendorItems);
+       /* List<TravelVendorSettings__c> travelVendorSettings = new List<TravelVendorSettings__c>();
+        Set<Id> travelVendorSettingsIds = new Set<Id>();
         try {
             if (items != null && !items.isEmpty()) {
                 for (VendorItem vendor : items) {
                     if (vendor.vendorSettings != null && !vendor.vendorSettings.isEmpty()) {
-                        travelVendorSettings.addAll(vendor.vendorSettings);
+                        for (TravelVendorSettings__c vendorSetting : vendor.vendorSettings) {
+                            if (vendorSetting.isEnable__c) {
+                                travelVendorSettings.add(vendorSetting);
+                                if (vendorSetting.Id != null) {
+                                    travelVendorSettingsIds.add(vendorSetting.Id);
+                                }
+                            }
+                        }
                     }
                 }
+            }
+            if (!travelVendorSettingsIds.isEmpty()) {
+                delete [SELECT Id FROM TravelVendorSettings__c WHERE Study_Site__r.Clinical_Trial_Profile__c = :ctpId AND Id NOT IN :travelVendorSettingsIds];
             }
             if (!travelVendorSettings.isEmpty()) {
                 upsert travelVendorSettings;
             }
         } catch (Exception e) {
             AuraHelper.throwException(e);
-        }
+        }*/
     }
 
     @AuraEnabled
